prevent window bounce on safari ios 2

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,10 +159,12 @@ html {}
 }
 #messages {
     overflow-y: scroll;
+     -webkit-overflow-scrolling: touch;
 }
 
 .clan-info {
     overflow-y: scroll;
+     -webkit-overflow-scrolling: touch;
 }
 .clan-logo {
     width: 30%;
